Implement substitution from popover

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,11 @@
 .small-caps {
     font-variant: small-caps;
 }
+
+.modal-content {
+    background-color: rgb(227, 227, 227);
+}
+
+button:active {
+    outline: none;
+}
