Make rule inputs as wide as necessary, submit substitution onEnter keypress

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,11 @@
 }
 
 .modal-content {
-    background-color: rgb(227, 227, 227);
+    background-color: rgb(235, 235, 235);
+}
+
+.modal-header {
+    border-bottom: 1px solid rgb(210, 210, 210);
 }
 
 button:active {
