--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 .removecaret.dropdown-toggle::after {
     display: none;
 }
+
 .dropdown-toggle::after {
     -webkit-transform: translateY(2px);
     -moz-transform: translateY(2px);
@@ -32,4 +33,8 @@
 
 button:active {
     outline: none;
+}
+
+.popover {
+    font-family: inherit;
 }
